CLUSTER-US/cluster-a/4.EKS-CRD/ciliumx/CiliumNetworkPolicy/deny.all.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "deny-all-traffic"
  namespace: thoth-production  
spec:
  endpointSelector: {}
  ingress:
  - {}  
  egress:
  - {}
